--- a/config/database.yml
+++ b/config/database.yml
@@ -30,7 +30,7 @@ test:
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
-# ever seen by anyone, they now have access to your database.
+# ever seen by anyone, they now have access to your 
 #
 # Instead, provide the password as a unix environment variable when you boot
 # the app. Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
